--- a/carouselcss.html
+++ b/carouselcss.html
@@ -1,18 +1,26 @@
 <style>
 b {color:  #226DAA;}
-pre {float: left;}pre {
+pre {width: 100%;}
+pre {
   text-align: left;
   background: 
     linear-gradient(to top, rgba(34, 109, 170, 0.2) 50%, rgba(255,255,255,0.5) 50%);
   
   tab-size: 1.5em;
-  background-attachment: local; background-position: 0 -4vh;
-  background-size: 100% 8vh;
-  line-height: 4vh;  
-  font-size: 3.3vh; 
+background-position: 1.8em 1.8em;
+    background-clip: padding-box;
+    background-attachment: local;
+  width: 98%;
+  margin: 0 1vw 20px;
+  overflow: scroll;
+  font-size: 1.5em;
+  box-sizing: border-box;
+  padding-top: 1.8em;
+  background-size: 100% 2.8em;
+  position: relative; 
+  top: -10px; line-height: 1.4; 
   margin-top: 0;
 }
-body {display: flex;}
 </style>
 <body>
 <pre>.merry-go-round {
