--- a/noreactvisacarousel.html
+++ b/noreactvisacarousel.html
@@ -5,11 +5,19 @@ b {color:  #226DAA;}pre {
   background: 
     linear-gradient(to top, rgba(34, 109, 170, 0.2) 50%, rgba(255,255,255,0.5) 50%);
   tab-size: 1.5em;
-  tab-size: 1.5em;
-  background-attachment: local; background-position: 0 -4vh;
-  background-size: 200vw 8vh;  width: 200vw;
-  line-height: 4vh;  
-  font-size: 3.3vh; 
+  tab-size: 1.5em;background-position: 1.8em 1.8em;
+    background-clip: padding-box;
+    background-attachment: local;
+  width: 98%;
+  margin: 0 1vw 20px;
+  overflow: scroll;
+  font-size: 1.5em;
+  box-sizing: border-box;
+  padding-top: 1.8em;
+  background-size: 100% 2.8em;
+  position: relative; 
+  top: -10px; 
+  line-height: 1.4;
 }
 </style>
 <pre>&lt;div class="bundleAddressCollection-button-wrapper">
